# nexpy

./: .buildinfo  .gitattributes  .gitignore  .project  .pydevproject  .travis.yml  COPYING  MANIFEST.in  README  README.md  README.rst  example_data.html  example_plugins.html  example_scripts.html  examples.html  genindex.html  importdialog.html  includeme.html  index.html  nexpy.py  objects.inv  py-modindex.html  pyproject.toml  pythongui.html  pythonshell.html  readers.html  requirements.txt  rpmbuild.sh  search.html  searchindex.js  setup.cfg  setup.py  treeapi.html
.github/workflows/: ci.yml  sphinx.yml
Documents/Computing/Repositories/nexpy-docs/doctrees/: environment.pickle  example_data.doctree  importdialog.doctree  includeme.doctree  index.doctree  pythonapi.doctree  pythongui.doctree  pythonshell.doctree  treeapi.doctree
_downloads/: __init__.py  chopper.nxs  chopper_plot.py  convert_qe.py  get_ei.py  writer_1_3.hdf5
_sources/: example_plugins.txt  examples.rst.txt  importdialog.txt  index.rst.txt  index.txt  pythongui.rst.txt  pythongui.txt  pythonshell.rst.txt  pythonshell.txt  readers.txt  treeapi.txt
_static/: documentation_options.js
conda-recipe/: meta.yaml
doc/: Makefile
doc/source/: conf.py  dialogs.rst  example_data.rst  example_plugins.rst  example_scripts.rst  examples.rst  importdialog.rst  index.rst  napi.rst  pythongui.rst  pythonshell.rst  readers.rst  treeapi.rst
docs/: make.bat  requirements.txt
docs/source/: conf.py  pythongui.rst  pythonshell.rst
docs/source/_static/: __ignore__.txt
scripts/: merge-tiffs  nexpy
src/: __init__.py  merge-tiffs.py  nexpy.py
src/api/frills/: fit.py
src/api/frills/functions/: gaussian.py  linear.py  lorentzian.py  lorenzian.py  polynomial.py  pseudovoigt.py
src/api/nexus/: __init__.py  napi.py  tree.py  unit.py
src/gui/: consoleapp.py  datadialogs.py  importdialog.py  mainwindow.py  plotview.py  qtkernel.py  qtkernelmanager.py  treemodel.py  treeview.py
src/nexpy/: __init__.py  _version.py  merge_tiffs.py  nexpygui.py  requires.py
src/nexpy/api/: prjPySpec.py
src/nexpy/api/frills/: fit.py
src/nexpy/api/frills/functions/: gaussian.py  linear.py  lorentzian.py  polynomial.py  pseudovoigt.py
src/nexpy/api/frills/models/: bose.py  critexp.py  op.py  pdfdecay.py
src/nexpy/api/nexus/: __init__.py  napi.py  tree.py  unit.py
src/nexpy/definitions/applications/: NXarchive.nxdl.xml  NXarpes.nxdl.xml  NXcanSAS.nxdl.xml  NXdirecttof.nxdl.xml  NXfluo.nxdl.xml  NXindirecttof.nxdl.xml  NXiqproc.nxdl.xml  NXlauetof.nxdl.xml  NXmonopd.nxdl.xml  NXmx.nxdl.xml  NXrefscan.nxdl.xml  NXreftof.nxdl.xml  NXsas.nxdl.xml  NXsastof.nxdl.xml  NXscan.nxdl.xml  NXspe.nxdl.xml  NXsqom.nxdl.xml  NXstxm.nxdl.xml  NXtas.nxdl.xml  NXtofnpd.nxdl.xml  NXtofraw.nxdl.xml  NXtofsingle.nxdl.xml  NXtomo.nxdl.xml  NXtomophase.nxdl.xml  NXtomoproc.nxdl.xml  NXxas.nxdl.xml  NXxasproc.nxdl.xml  NXxbase.nxdl.xml  NXxeuler.nxdl.xml  NXxkappa.nxdl.xml  NXxlaue.nxdl.xml  NXxlaueplate.nxdl.xml  NXxnb.nxdl.xml  NXxrot.nxdl.xml  nxdlformat.xsl
src/nexpy/definitions/base_classes/: NXaperture.nxdl.xml  NXattenuator.nxdl.xml  NXbeam.nxdl.xml  NXbeam_stop.nxdl.xml  NXbending_magnet.nxdl.xml  NXcapillary.nxdl.xml  NXcharacterization.nxdl.xml  NXcite.nxdl.xml  NXcollection.nxdl.xml  NXcollimator.nxdl.xml  NXcrystal.nxdl.xml  NXcylindrical_geometry.nxdl.xml  NXdata.nxdl.xml  NXdetector.nxdl.xml  NXdetector_channel.nxdl.xml  NXdetector_group.nxdl.xml  NXdetector_module.nxdl.xml  NXdisk_chopper.nxdl.xml  NXentry.nxdl.xml  NXenvironment.nxdl.xml  NXevent_data.nxdl.xml  NXfermi_chopper.nxdl.xml  NXfilter.nxdl.xml  NXflipper.nxdl.xml  NXfresnel_zone_plate.nxdl.xml  NXgeometry.nxdl.xml  NXgrating.nxdl.xml  NXguide.nxdl.xml  NXinsertion_device.nxdl.xml  NXinstrument.nxdl.xml  NXlog.nxdl.xml  NXmirror.nxdl.xml  NXmoderator.nxdl.xml  NXmonitor.nxdl.xml  NXmonochromator.nxdl.xml  NXnote.nxdl.xml  NXobject.nxdl.xml  NXoff_geometry.nxdl.xml  NXorientation.nxdl.xml  NXparameters.nxdl.xml  (+20 more)
src/nexpy/definitions/contributed_definitions/: NXarpes.nxdl.xml  NXbeamline.nxdl.xml  NXcite.nxdl.xml  NXcontainer.nxdl.xml  NXcsg.nxdl.xml  NXcxi_ptycho.nxdl.xml  NXelectrostatic_kicker.nxdl.xml  NXfresnel_zone_plate.nxdl.xml  NXmagnetic_kicker.nxdl.xml  NXmx.nxdl.xml  NXquadric.nxdl.xml  NXquadrupole_magnet.nxdl.xml  NXseparator.nxdl.xml  NXsnsevent.nxdl.xml  NXsnshisto.nxdl.xml  NXsolenoid_magnet.nxdl.xml  NXsolid_geometry.nxdl.xml  NXspecdata.nxdl.xml  NXspin_rotator.nxdl.xml  NXtransformations.nxdl.xml  nxdlformat.xsl
src/nexpy/examples/: 2-column.txt  3-column.txt  README.rst  chopper.nxs  example.nxs  scan101.nxs
src/nexpy/examples/plugins/: README.rst  pyproject.toml
src/nexpy/examples/plugins/chopper/: __init__.py  convert_qe.py  get_ei.py
src/nexpy/examples/plugins/chopper_plugin/: pyproject.toml
src/nexpy/examples/plugins/chopper_plugin/chopper/: convert_qe.py  get_ei.py
src/nexpy/examples/scripts/: README.rst  chopper_plot.py  example.py  print_tree.py  spefix.py
src/nexpy/gui/: consoleapp.py  datadialogs.py  dialogs.py  execution.py  fitdialogs.py  importdialog.py  mainwindow.py  plotview.py  pyqt.py  remotedialogs.py  scripteditor.py  treeview.py  utils.py  widgets.py
src/nexpy/models/: critexp.py  op.py
src/nexpy/readers/: readcatalog.py  readcbf.py  readfabio.py  readimage.py  readnpy.py  readprjpyspec.py  readpyspec.py  readspe.py  readspec.py  readstack.py  readtiff.py  readtiffs.py  readtxt.py
src/nexpy/readers/tifffile/: tifffile.py
src/readers/: __init__.py  readcatalog.py  readspec.py  readtiff.py  readtiffs.py  readtxt.py
src/readers/tifffile/: tifffile.c
tests/: test_imports.py
