[build-system]
requires = ["setuptools >= 64", "setuptools_scm >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "NeXpy"
dynamic = ["version"]
description = "Python GUI to analyze NeXus data"
readme = "README.md"
license = {file = "COPYING"}
authors = [{name = "Raymond Osborn", email = "rayosborn@mac.com"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Visualization",
]

keywords = [
    "neutron scattering",
    "x-ray scattering",
    "data analysis",
    "visualization",
]
requires-python = ">=3.9"
dependencies = [
    "ansi2html",
    "fabio",
    "h5py",
    "ipython",
    "lmfit",
    "matplotlib",
    "mplcursors",
    "nexusformat >= 2.0.0b6",
    "numpy",
    "packaging",
    "pillow",
    "pygments",
    "pylatexenc",
    "qtconsole",
    "qtpy",
    "scipy",
    "importlib_metadata; python_version < '3.10'",
    "importlib_resources; python_version < '3.10'"
]

[project.optional-dependencies]
testing = ["pytest"]
spec = ["spec2nexus"]

[project.urls]
Homepage = "https://nexpy.github.io/nexpy"
Repository = "https://github.com/nexpy/nexpy.git"
Issues = "https://github.com/nexpy/nexpy/issues"
Documentation = "https://nexpy.github.io/nexpy"
Changelog = "https://github.com/nexpy/nexpy/releases"

[project.gui-scripts]
nexpy = "nexpy.nexpygui:main"

[tool.setuptools_scm]
version_file = "src/nexpy/_version.py"

[tool.setuptools.package-data]
"nexpy.gui.resources" = ["*.*"]
"nexpy.examples" = ["*.*", "*/*.*", "*/*/*.*", "*/*/*/*.*"]
