[metadata]
name = NeXpy
description = A Python GUI to analyze NeXus data
long_description = file: README.md   
long_description_content_type = text/markdown
url = https://nexpy.github.io/nexpy/
download_url = https://github.com/nexpy/nexpy
author = Raymond Osborn
author_email = rayosborn@mac.com
license = Modified BSD License
license_files = COPYING
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.7
install_requires =
    nexusformat >= 0.7.1
    numpy
    scipy
    h5py >= 2.9
    qtpy
    qtconsole
    ipython
    matplotlib
    lmfit >= 1.0.3
    pylatexenc
    ansi2html
    pillow
    mplcursors
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
nexpy.gui = resources/*.*, resources/*/*.*
nexpy.definitions = */*.xml
nexpy = examples/*.*, examples/*/*.*, examples/*/*/*.*

[options.entry_points]
gui_scripts =
    nexpy = nexpy.nexpygui:main

[options.extras_require]
spec = spec2nexus
fabio = fabio
testing = 
    pyqt5
    pytest

[bdist_rpm]
requires = 
    nexusformat
    numpy
    scipy
    h5py
    qtpy
    qtconsole
    ipython
    matplotlib
    lmfit
    pylatexenc
    ansi2html
    pillow
    mplcursor
